src/templates/EmailEditorContent/EditPreviewText.css
.edit-preview-text {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  max-width: 37.5rem;
  margin-block-start: 1rem;
  width: 100%;

  .expand-collapse-button {
    border-radius: 50%;
    min-height: 1.5rem;
    min-width: 1.5rem;
    transition:
      background-color ease-in 100ms,
      transform ease-in 100ms;

    &:focus,
    &:hover {
      background-color: var(--gray-light-medium);
    }

    &.expanded {
      transform: rotate(0);
    }

    &.collapsed {
      transform: rotate(90deg);
    }
  }
}

.edit-preview-text-heading-container {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.edit-preview-text-heading-container h3 {
  display: flex;
  font-size: var(--font-medium);
  font-weight: var(--weight-normal);
  margin: 0;
}

.edit-preview-text-text-area-container {
  background-color: var(--gray-light-medium);
  border-radius: 0.25rem;
  display: flex;
  position: relative;
}

.edit-preview-text-text-area-container textarea {
  background-color: transparent;
  border: 0;
  color: var(--gray-dark);
  font-family: var(--sans-serif);
  font-size: var(--font-small);
  line-height: 1.5;
  padding: 0.5rem 2rem 0.5rem 1rem;
  resize: none;
  width: 100%;
  height: 100%;
  min-height: 3.625rem;
  position: absolute;
  top: 0;
  left: 0;
}

.edit-preview-text-text-area-container textarea::placeholder {
  color: var(--gray-medium-dark);
}

.edit-preview-text-text-area-container p {
  bottom: 0.5rem;
  color: var(--gray-medium-dark);
  font-size: var(--font-tiny);
  font-style: italic;
  margin: 0;
  position: absolute;
  right: 1rem;
}

